--- a/src/main/resources/log4j2-local.yml
+++ b/src/main/resources/log4j2-local.yml
@@ -17,14 +17,13 @@ Configutation:
       level: INFO
       AppenderRef:
         - ref: CONSOLE
-        - ref: APPLICATION
     Logger:
-      - name: Online-Shopping-Mall
+      - name: me.naming
         additivity: false
         level: info
         AppenderRef:
           - ref: CONSOLE
-      - name: Online-Shopping-Mall
+      - name: me.naming
         additivity: false
         level: debug
         AppenderRef:
