--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'junit:junit:4.12'
+
     compileOnly 'org.projectlombok:lombok'
-    runtimeOnly 'com.h2database:h2'
     runtimeOnly 'mysql:mysql-connector-java'                //mysql connect 드라이버 설치
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
@@ -42,11 +41,15 @@ dependencies {
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.10.3'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-log4j2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testImplementation 'mysql:mysql-connector-java'
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation 'org.hamcrest:hamcrest-library:2.2'
+
+    // JUnit5의 경우 api, engine을 함께 사용해야 한다.
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    
+    testRuntimeOnly 'com.h2database:h2'
 }
 
 test {
