--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,7 @@
 #     : JPA 가 적용될 데이터베이스를 뜻하며, 이번 프로젝트는 MySQL로 프로젝트를 개발했습니다.
 # - spring.jpa.database-platform
 #     : JPA 데이터베이스 플랫폼(ex. MyInnoDBDialect, OracleDialect 등)을 지정함으로써 SQL Dialect를 지정합니다.
+#     : SQL Dialect란 사전적으로 방언이라는 의미로써 JPA에서는 MS-SQL, Oracle, MySQL에서 각각 다르게 쓰이는 SQL문을 추상화해 각각의 구현체에 맞는 쿼리문을 생성해줍니다.
 # - spring.jpa.open-in-view
 #     : JPA의 OSIV(Open Session In View) 설정을 지정해주는 것입니다.
 #       OSIV는 웹 요청이 완료될 때까지 동일한 EntityManager를 갖도록 해주는 것이며, true인 경우 Request가 끝날때까지
