--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
-
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'mysql:mysql-connector-java'                //mysql connect 드라이버 설치
@@ -49,10 +47,15 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest:2.2'
     testImplementation 'org.hamcrest:hamcrest-library:2.2'
 
+    /**
+     * (10/11) Intellij 내부적으로 JUnit을 지원해주고 있습니다.
+     * 따라서 아래 jupiter를 설정하면, version conflict로 인해 테스트코드가 정상적으로 동작하지 않을 수 있습니다.(MemberService Test 코드 작성 중 발견)
+     * 참고 : https://youtrack.jetbrains.com/issue/IDEA-178404
+     */
     // JUnit5의 경우 api, engine을 함께 사용해야 한다.
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
-    
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+
     testRuntimeOnly 'com.h2database:h2'
 }
 
